--- a/Components/permissions/src/main/res/values/strings.xml
+++ b/Components/permissions/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Permissions</string>
+    <string name="permission_confirm">确认</string>
+    <string name="permission_cancel">取消</string>
+    <string name="permission_title">权限设置</string>
 </resources>
